# deskconfig

./: Makefile.am  configure.ac  deskconfig.geany
data/: Makefile.am  web_browse_sample.glade
data/openbox/: lubuntu-rc.xml
data/ui/: 2-desktop.glade  lxconfig.glade
lubuntu-meta/: lubuntu-desktop_0.33_i386.deb  package-list
src/: CommandCheckButton.vala  CommandRadioButton.vala  DeskConfig.vala  Job.vala  Makefile.am  PageAccessories.vala  PageBase.vala  PageBrowser.vala  PageConfirm.vala  PageGames.vala  PageImage.vala  PageInternet.vala  PageIntro.vala  PageMail.vala  PageMode.vala  PageMultimedia.vala  PageOffice.vala  PageProgramming.vala  PageSummary.vala
